test/asm/fortio/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  - ns.yaml
  - fortio.yaml
  - fortio-cli.yaml

nameSuffix: asm

namespace: fortioasm
