test/asm/fortio/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fortio
  labels:
    istio-env: istiod-asm
